# PEANUT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: conf.py  dataset.html  energy_prediction.html  genindex.html  index.html  index.rst  learned_features.html  network_architecture.html  objects.inv  representation_learning.html  search.html  searchindex.js  static_features.html  work_progress.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_sources/: dataset.rst.txt  energy_prediction.rst.txt  index.rst.txt  learned_features.rst.txt  network_architecture.rst.txt  representation_learning.rst.txt  static_features.rst.txt  work_progress.rst.txt
docs/_static/: custom.css
model_training/: data_loader.py  prepare_data.py
src/: __init__.py
src/building_blocks/: model.py
src/peanut/building_blocks/: static_features.py
src/peanut/model_train/: data_loader.py  format_data.py
tests/: test_building_blocks.py
